v1.033 debug UI